--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "start": "NODE_ENV=test node ./server.js",
-    "run":"NODE_ENV=production ./server.js"
+    "start": "NODE_ENV=production node ./server.js",
+    "run": "NODE_ENV=production node ./server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
