--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "start": "NODE_ENV=production node ./server.js",
+    "start": "NODE_ENV=test node ./server.js",
     "run": "NODE_ENV=production node ./server.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.472.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -12,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node": "^21.1.0",
     "pg": "^8.11.3",
     "square": "^33.0.0",
