--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
     "start": "NODE_ENV=test node ./server.js",
-    "run": "NODE_ENV=production node ./server.js"
+    "run": "NODE_ENV=production node ./server.js",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.472.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "jsonschema": "^1.4.1",
